--- a/dev/src/styles/utilities.scss
+++ b/dev/src/styles/utilities.scss
@@ -1,154 +1,159 @@
-// color & background-color
-@each $key, $value in $colors {
-  .text-#{$key} {
-    color: $value !important;
-  }
-
-  .bg-#{$key} {
-    background-color: $value !important;
+// mixins
+@mixin generate-utilities($map, $prefix, $property) {
+  @each $key, $value in $map {
+    .#{$prefix}-#{$key} {
+      #{$property}: $value !important;
+    }
   }
 }
+
+@mixin generate-margin-padding-utilities($map, $prefix, $property) {
+  @each $key, $value in $map {
+    .#{$prefix}-#{$key} {
+      #{$property}: $value !important;
+    }
+    .#{$prefix}l-#{$key} {
+      #{$property}-left: $value !important;
+    }
+    .#{$prefix}r-#{$key} {
+      #{$property}-right: $value !important;
+    }
+    .#{$prefix}x-#{$key} {
+      #{$property}-right: $value !important;
+      #{$property}-left: $value !important;
+    }
+    .#{$prefix}t-#{$key} {
+      #{$property}-top: $value !important;
+    }
+    .#{$prefix}b-#{$key} {
+      #{$property}-bottom: $value !important;
+    }
+    .#{$prefix}y-#{$key} {
+      #{$property}-top: $value !important;
+      #{$property}-bottom: $value !important;
+    }
+  }
+}
+
+@mixin generate-breakpoint-utilities($breakpoints, $map, $prefix, $property) {
+  @each $breakpoint, $_ in $breakpoints {
+    @each $key, $value in $map {
+      .#{$breakpoint}\:#{$prefix}-#{$key} {
+        @include breakpoint($breakpoint) {
+          #{$property}: $value !important;
+        }
+      }
+    }
+  }
+}
+
+@mixin generate-breakpoint-margin-padding-utilities(
+  $breakpoints,
+  $map,
+  $prefix,
+  $property
+) {
+  @each $breakpoint, $_ in $breakpoints {
+    @each $key, $value in $map {
+      .#{$breakpoint}\:#{$prefix}-#{$key} {
+        @include breakpoint($breakpoint) {
+          #{$property}: $value !important;
+        }
+      }
+      .#{$breakpoint}\:#{$prefix}l-#{$key} {
+        @include breakpoint($breakpoint) {
+          #{$property}-left: $value !important;
+        }
+      }
+      .#{$breakpoint}\:#{$prefix}r-#{$key} {
+        @include breakpoint($breakpoint) {
+          #{$property}-right: $value !important;
+        }
+      }
+      .#{$breakpoint}\:#{$prefix}x-#{$key} {
+        @include breakpoint($breakpoint) {
+          #{$property}-right: $value !important;
+          #{$property}-left: $value !important;
+        }
+      }
+      .#{$breakpoint}\:#{$prefix}t-#{$key} {
+        @include breakpoint($breakpoint) {
+          #{$property}-top: $value !important;
+        }
+      }
+      .#{$breakpoint}\:#{$prefix}b-#{$key} {
+        @include breakpoint($breakpoint) {
+          #{$property}-bottom: $value !important;
+        }
+      }
+      .#{$breakpoint}\:#{$prefix}y-#{$key} {
+        @include breakpoint($breakpoint) {
+          #{$property}-top: $value !important;
+          #{$property}-bottom: $value !important;
+        }
+      }
+    }
+  }
+}
+
+// color & background-color
+@include generate-utilities($colors, 'text', 'color');
+@include generate-utilities($colors, 'bg', 'background-color');
 
 // font-size
-@each $key, $value in $font-sizes {
-  .fs-#{$key} {
-    font-size: $value !important;
-  }
-}
+@include generate-utilities($font-sizes, 'fs', 'font-size');
 
 // font-weight
-@each $key, $value in $font-weights {
-  .fw-#{$key} {
-    font-weight: $value !important;
-  }
-}
+@include generate-utilities($font-weights, 'fw', 'font-weight');
 
 // text-align
-@each $key, $value in $text-directions {
-  .text-#{$key} {
-    text-align: $value !important;
-  }
-}
+@include generate-utilities($text-directions, 'text', 'text-align');
 
 // line-height
-@each $key, $value in $line-heights {
-  .lh-#{$key} {
-    line-height: $value !important;
-  }
-}
+@include generate-utilities($line-heights, 'lh', 'line-height');
 
 // visibility
-@each $key, $value in $visibilities {
-  .v-#{$key} {
-    visibility: $value !important;
-  }
-}
+@include generate-utilities($visibilities, 'v', 'visibility');
 
 // display
-@each $key, $value in $displays {
-  .d-#{$key} {
-    display: $value !important;
-  }
-}
+@include generate-utilities($displays, 'd', 'display');
 
 // position
-@each $key, $value in $positions {
-  .ps-#{$key} {
-    position: $value !important;
-  }
-}
+@include generate-utilities($positions, 'ps', 'position');
 
 // margin & padding
-@each $key, $value in $spaces {
-  .m-#{$key} {
-    margin: $value !important;
-  }
-  .ml-#{$key} {
-    margin-left: $value !important;
-  }
-  .mr-#{$key} {
-    margin-right: $value !important;
-  }
-  .mx-#{$key} {
-    margin-right: $value !important;
-    margin-left: $value !important;
-  }
-  .mt-#{$key} {
-    margin-top: $value !important;
-  }
-  .mb-#{$key} {
-    margin-bottom: $value !important;
-  }
-  .my-#{$key} {
-    margin-top: $value !important;
-    margin-bottom: $value !important;
-  }
-  .p-#{$key} {
-    padding: $value !important;
-  }
-  .pl-#{$key} {
-    padding-left: $value !important;
-  }
-  .pr-#{$key} {
-    padding-right: $value !important;
-  }
-  .px-#{$key} {
-    padding-right: $value !important;
-    padding-left: $value !important;
-  }
-  .pt-#{$key} {
-    padding-top: $value !important;
-  }
-  .pb-#{$key} {
-    padding-bottom: $value !important;
-  }
-  .py-#{$key} {
-    padding-top: $value !important;
-    padding-bottom: $value !important;
-  }
-}
+@include generate-margin-padding-utilities($spaces, 'm', 'margin');
+@include generate-margin-padding-utilities($spaces, 'p', 'padding');
 
 // white-space
-@each $key, $value in $white-spaces {
-  .ws-#{$key} {
-    white-space: $value !important;
-  }
-}
+@include generate-utilities($white-spaces, 'ws', 'white-space');
 
 // word-break
-@each $key, $value in $word-breaks {
-  .wb-#{$key} {
-    word-break: $value !important;
-  }
-}
+@include generate-utilities($word-breaks, 'wb', 'word-break');
 
 // flex-direction
-@each $key, $value in $flex-directions {
-  .flex-direction-#{$key} {
-    flex-direction: $value !important;
-  }
-}
+@include generate-utilities(
+  $flex-directions,
+  'flex-direction',
+  'flex-direction'
+);
 
 // flex-wrap
-@each $key, $value in $flex-wraps {
-  .flex-wrap-#{$key} {
-    flex-wrap: $value !important;
-  }
-}
+@include generate-utilities($flex-wraps, 'flex-wrap', 'flex-wrap');
 
 // justify-content
-@each $key, $value in $justify-content-positions {
-  .justify-content-#{$key} {
-    justify-content: $value !important;
-  }
-}
+@include generate-utilities(
+  $justify-content-positions,
+  'justify-content',
+  'justify-content'
+);
 
 // align-items
-@each $key, $value in $align-items-positions {
-  .align-items-#{$key} {
-    align-items: $value !important;
-  }
-}
+@include generate-utilities(
+  $align-items-positions,
+  'align-items',
+  'align-items'
+);
 
 // util
 .flex-1 {
@@ -172,217 +177,101 @@
 }
 
 // breakpoints styles
+@include generate-breakpoint-utilities($breakpoints, $colors, 'text', 'color');
+@include generate-breakpoint-utilities(
+  $breakpoints,
+  $colors,
+  'bg',
+  'background-color'
+);
+@include generate-breakpoint-utilities(
+  $breakpoints,
+  $font-sizes,
+  'fs',
+  'font-size'
+);
+@include generate-breakpoint-utilities(
+  $breakpoints,
+  $font-weights,
+  'fw',
+  'font-weight'
+);
+@include generate-breakpoint-utilities(
+  $breakpoints,
+  $text-directions,
+  'text',
+  'text-align'
+);
+@include generate-breakpoint-utilities(
+  $breakpoints,
+  $line-heights,
+  'lh',
+  'line-height'
+);
+@include generate-breakpoint-utilities(
+  $breakpoints,
+  $visibilities,
+  'v',
+  'visibility'
+);
+@include generate-breakpoint-utilities($breakpoints, $displays, 'd', 'display');
+@include generate-breakpoint-utilities(
+  $breakpoints,
+  $positions,
+  'ps',
+  'position'
+);
+@include generate-breakpoint-margin-padding-utilities(
+  $breakpoints,
+  $spaces,
+  'm',
+  'margin'
+);
+@include generate-breakpoint-margin-padding-utilities(
+  $breakpoints,
+  $spaces,
+  'p',
+  'padding'
+);
+@include generate-breakpoint-utilities(
+  $breakpoints,
+  $white-spaces,
+  'ws',
+  'white-space'
+);
+@include generate-breakpoint-utilities(
+  $breakpoints,
+  $word-breaks,
+  'wb',
+  'word-break'
+);
+@include generate-breakpoint-utilities(
+  $breakpoints,
+  $flex-directions,
+  'flex-direction',
+  'flex-direction'
+);
+@include generate-breakpoint-utilities(
+  $breakpoints,
+  $flex-wraps,
+  'flex-wrap',
+  'flex-wrap'
+);
+@include generate-breakpoint-utilities(
+  $breakpoints,
+  $justify-content-positions,
+  'justify-content',
+  'justify-content'
+);
+@include generate-breakpoint-utilities(
+  $breakpoints,
+  $align-items-positions,
+  'align-items',
+  'align-items'
+);
+
+// util for breakpoints
 @each $breakpoint, $_ in $breakpoints {
-  // breakpoints: color & background-color
-  @each $key, $value in $colors {
-    .#{$breakpoint}\:text-#{$key} {
-      @include breakpoint($breakpoint) {
-        color: $value !important;
-      }
-    }
-
-    .#{$breakpoint}\:color-#{$key} {
-      @include breakpoint($breakpoint) {
-        background-color: $value !important;
-      }
-    }
-  }
-
-  // breakpoints: font-size
-  @each $key, $value in $font-sizes {
-    .#{$breakpoint}\:fs-#{$key} {
-      @include breakpoint($breakpoint) {
-        font-size: $value !important;
-      }
-    }
-  }
-
-  // breakpoints: font-weight
-  @each $key, $value in $font-weights {
-    .#{$breakpoint}\:fw-#{$key} {
-      @include breakpoint($breakpoint) {
-        font-weight: $value !important;
-      }
-    }
-  }
-
-  // breakpoints: background-color
-  @each $key, $value in $colors {
-    .#{$breakpoint}\:text-#{$key} {
-      @include breakpoint($breakpoint) {
-        color: $value !important;
-      }
-    }
-  }
-
-  // breakpoints: text-align
-  @each $key, $value in $text-directions {
-    .#{$breakpoint}\:text-#{$key} {
-      @include breakpoint($breakpoint) {
-        text-align: $value !important;
-      }
-    }
-  }
-
-  // breakpoints: line-height
-  @each $key, $value in $line-heights {
-    .#{$breakpoint}\:lh-#{$key} {
-      @include breakpoint($breakpoint) {
-        line-height: $value !important;
-      }
-    }
-  }
-
-  // breakpoints: visibility
-  @each $key, $value in $visibilities {
-    .#{$breakpoint}\:v-#{$key} {
-      visibility: $value !important;
-    }
-  }
-
-  // breakpoints: display
-  @each $key, $value in $displays {
-    .#{$breakpoint}\:d-#{$key} {
-      @include breakpoint($breakpoint) {
-        display: $value !important;
-      }
-    }
-  }
-
-  // breakpoints: position
-  @each $key, $value in $positions {
-    .#{$breakpoint}\:ps-#{$key} {
-      @include breakpoint($breakpoint) {
-        position: $value !important;
-      }
-    }
-  }
-
-  // breakpoints: margin & padding
-  @each $key, $value in $spaces {
-    .#{$breakpoint}\:m-#{$key} {
-      @include breakpoint($breakpoint) {
-        margin: $value !important;
-      }
-    }
-    .#{$breakpoint}\:ml-#{$key} {
-      @include breakpoint($breakpoint) {
-        margin-left: $value !important;
-      }
-    }
-    .#{$breakpoint}\:mr-#{$key} {
-      @include breakpoint($breakpoint) {
-        margin-right: $value !important;
-      }
-    }
-    .#{$breakpoint}\:mx-#{$key} {
-      @include breakpoint($breakpoint) {
-        margin-right: $value !important;
-        margin-left: $value !important;
-      }
-    }
-    .#{$breakpoint}\:mt-#{$key} {
-      @include breakpoint($breakpoint) {
-        margin-top: $value !important;
-      }
-    }
-    .#{$breakpoint}\:mb-#{$key} {
-      @include breakpoint($breakpoint) {
-        margin-bottom: $value !important;
-      }
-    }
-    .#{$breakpoint}\:my-#{$key} {
-      @include breakpoint($breakpoint) {
-        margin-top: $value !important;
-        margin-bottom: $value !important;
-      }
-    }
-
-    .#{$breakpoint}\:p-#{$key} {
-      @include breakpoint($breakpoint) {
-        padding: $value !important;
-      }
-    }
-    .#{$breakpoint}\:pl-#{$key} {
-      @include breakpoint($breakpoint) {
-        padding-left: $value !important;
-      }
-    }
-    .#{$breakpoint}\:pr-#{$key} {
-      @include breakpoint($breakpoint) {
-        padding-right: $value !important;
-      }
-    }
-    .#{$breakpoint}\:px-#{$key} {
-      @include breakpoint($breakpoint) {
-        padding-right: $value !important;
-        padding-left: $value !important;
-      }
-    }
-    .#{$breakpoint}\:pt-#{$key} {
-      @include breakpoint($breakpoint) {
-        padding-top: $value !important;
-      }
-    }
-    .#{$breakpoint}\:pb-#{$key} {
-      @include breakpoint($breakpoint) {
-        padding-bottom: $value !important;
-      }
-    }
-    .#{$breakpoint}\:py-#{$key} {
-      @include breakpoint($breakpoint) {
-        padding-top: $value !important;
-        padding-bottom: $value !important;
-      }
-    }
-  }
-
-  // breakpoints: white-space
-  @each $key, $value in $white-spaces {
-    .#{$breakpoint}\:ws-#{$key} {
-      @include breakpoint($breakpoint) {
-        white-space: $value !important;
-      }
-    }
-  }
-
-  // breakpoints: flex-directions
-  @each $key, $value in $flex-directions {
-    .#{$breakpoint}\:flex-direction-#{$key} {
-      @include breakpoint($breakpoint) {
-        flex-direction: $value !important;
-      }
-    }
-  }
-
-  // breakpoints: flex-wrap
-  @each $key, $value in $flex-wraps {
-    .#{$breakpoint}\:flex-wrap-#{$key} {
-      @include breakpoint($breakpoint) {
-        flex-wrap: $value !important;
-      }
-    }
-  }
-
-  // breakpoints: justify-content
-  @each $key, $value in $justify-content-positions {
-    .#{$breakpoint}\:justify-content-#{$key} {
-      @include breakpoint($breakpoint) {
-        justify-content: $value !important;
-      }
-    }
-  }
-
-  // breakpoints: align-items
-  @each $key, $value in $align-items-positions {
-    .#{$breakpoint}\:align-items-#{$key} {
-      @include breakpoint($breakpoint) {
-        align-items: $value !important;
-      }
-    }
-  }
-
-  // breakpoints: util
   .#{$breakpoint}\:flex-1 {
     @include breakpoint($breakpoint) {
       flex: 1 !important;
