--- a/dev/src/styles/utilities.scss
+++ b/dev/src/styles/utilities.scss
@@ -7,8 +7,8 @@
   }
 }
 
-@mixin generate-margin-padding-utilities($map, $prefix, $property) {
-  @each $key, $value in $map {
+@mixin generate-spaces-utilities($prefix, $property) {
+  @each $key, $value in $spaces {
     .#{$prefix}-#{$key} {
       #{$property}: $value !important;
     }
@@ -47,9 +47,9 @@
   }
 }
 
-@mixin generate-breakpoint-margin-padding-utilities($map, $prefix, $property) {
+@mixin generate-breakpoint-spaces-utilities($prefix, $property) {
   @each $breakpoint, $_ in $breakpoints {
-    @each $key, $value in $map {
+    @each $key, $value in $spaces {
       .#{$breakpoint}\:#{$prefix}-#{$key} {
         @include breakpoint($breakpoint) {
           #{$property}: $value !important;
@@ -117,8 +117,8 @@
 @include generate-utilities($positions, 'ps', 'position');
 
 // margin & padding
-@include generate-margin-padding-utilities($spaces, 'm', 'margin');
-@include generate-margin-padding-utilities($spaces, 'p', 'padding');
+@include generate-spaces-utilities('m', 'margin');
+@include generate-spaces-utilities('p', 'padding');
 
 // white-space
 @include generate-utilities($white-spaces, 'ws', 'white-space');
@@ -181,8 +181,8 @@
 @include generate-breakpoint-utilities($visibilities, 'v', 'visibility');
 @include generate-breakpoint-utilities($displays, 'd', 'display');
 @include generate-breakpoint-utilities($positions, 'ps', 'position');
-@include generate-breakpoint-margin-padding-utilities($spaces, 'm', 'margin');
-@include generate-breakpoint-margin-padding-utilities($spaces, 'p', 'padding');
+@include generate-breakpoint-spaces-utilities('m', 'margin');
+@include generate-breakpoint-spaces-utilities('p', 'padding');
 @include generate-breakpoint-utilities($white-spaces, 'ws', 'white-space');
 @include generate-breakpoint-utilities($word-breaks, 'wb', 'word-break');
 @include generate-breakpoint-utilities(
