--- a/dev/src/styles/index.scss
+++ b/dev/src/styles/index.scss
@@ -1,3 +1,3 @@
 @use './mediaquery.scss' as mediaquery;
-@import './variables.scss';
+@use './variables.scss' as variables;
 @import './utilities.scss';
