--- a/dev/src/styles/utilities.scss
+++ b/dev/src/styles/utilities.scss
@@ -1,3 +1,6 @@
+@use './mediaquery.scss' as mediaquery;
+@use './variables.scss' as variables;
+
 // mixins
 @mixin generate-utilities($map, $prefix, $property) {
   @each $key, $value in $map {
