--- a/dev/src/styles/index.scss
+++ b/dev/src/styles/index.scss
@@ -1,3 +1,1 @@
-@use './mediaquery.scss' as mediaquery;
-@use './variables.scss' as variables;
-@import './utilities.scss';
+@use './utilities.scss' as utilities;
