--- a/dev/src/styles/utilities.scss
+++ b/dev/src/styles/utilities.scss
@@ -1,6 +1,28 @@
 @use './mediaquery.scss' as mediaquery;
 @use './variables.scss' as variables;
 
+:root {
+  @each $name, $value in variables.$define-colors {
+    --color-#{$name}: #{$value};
+  }
+
+  @each $name, $value in variables.$define-font-sizes {
+    --font-size-#{$name}: #{$value};
+  }
+
+  @each $name, $value in variables.$define-font-weights {
+    --font-weight-#{$name}: #{$value};
+  }
+
+  @each $name, $value in variables.$define-line-heights {
+    --line-height-#{$name}: #{$value};
+  }
+
+  @each $name, $value in variables.$define-spaces {
+    --space-#{$name}: #{$value};
+  }
+}
+
 // mixins
 @mixin generate-utilities($map, $prefix, $property) {
   @each $key, $value in $map {
