--- a/dev/src/styles/variables.scss
+++ b/dev/src/styles/variables.scss
@@ -1,74 +1,109 @@
-$color-primary: #00a596 !default;
-$color-secondary: #000000 !default;
-$color-transparent: transparent !default;
-$color-black: #000000 !default;
-$color-white: #ffffff !default;
-$color-gray: #f3f4f6 !default;
-$color-background: #ffffff !default;
-$color-border: #dce1e6 !default;
-$color-heading: #00a596 !default;
-$color-body: #000000 !default;
-$color-link: #0064e6 !default;
-$color-muted: #787878 !default;
-$color-warning: #ffc107 !default;
-$color-danger: #dc3545 !default;
-$colors: (
-  'primary': $color-primary,
-  'secondary': $color-secondary,
-  'transparent': $color-transparent,
-  'black': $color-black,
-  'white': $color-white,
-  'gray': $color-gray,
-  'link': $color-link,
-  'muted': $color-muted,
-  'warning': $color-warning,
-  'danger': $color-danger
+$define-colors: (
+  'primary': #00a596,
+  'secondary': #000000,
+  'transparent': transparent,
+  'black': #000000,
+  'white': #ffffff,
+  'gray': #f3f4f6,
+  'background': #ffffff,
+  'border': #dce1e6,
+  'heading': #00a596,
+  'body': #000000,
+  'link': #0064e6,
+  'muted': #787878,
+  'warning': #ffc107,
+  'danger': #dc3545
 ) !default;
+$colors: ();
+@each $name, $value in $define-colors {
+  $colors: map-merge(
+    $colors,
+    (
+      $name: unquote('var(--color-#{$name})')
+    )
+  );
+}
 
-$font-size-xs: 12px !default;
-$font-size-sm: 14px !default;
-$font-size-md: 16px !default;
-$font-size-lg: 18px !default;
-$font-size-xl: 20px !default;
-$font-size-2xl: 22px !default;
-$font-size-3xl: 24px !default;
-$font-size-4xl: 36px !default;
-$font-size-5xl: 40px !default;
-$font-sizes: (
-  'xs': $font-size-xs,
-  'sm': $font-size-sm,
-  'md': $font-size-md,
-  'lg': $font-size-lg,
-  'xl': $font-size-xl,
-  '2xl': $font-size-2xl,
-  '3xl': $font-size-3xl,
-  '4xl': $font-size-4xl,
-  '5xl': $font-size-5xl
+$define-font-sizes: (
+  'xs': 12px,
+  'sm': 14px,
+  'md': 16px,
+  'lg': 18px,
+  'xl': 20px,
+  '2xl': 22px,
+  '3xl': 24px,
+  '4xl': 36px,
+  '5xl': 40px
 ) !default;
+$font-sizes: ();
+@each $name, $value in $define-font-sizes {
+  $font-sizes: map-merge(
+    $font-sizes,
+    (
+      $name: unquote('var(--font-size-#{$name})')
+    )
+  );
+}
 
-$font-weight-normal: 400 !default;
-$font-weight-bold: 700 !default;
-$font-weights: (
-  'normal': $font-weight-normal,
-  'bold': $font-weight-bold
+$define-font-weights: (
+  'normal': 400,
+  'bold': 700
 ) !default;
+$font-weights: ();
+@each $name, $value in $define-font-weights {
+  $font-weights: map-merge(
+    $font-weights,
+    (
+      $name: unquote('var(--font-weight-#{$name})')
+    )
+  );
+}
+
+$define-line-heights: (
+  'default': 1,
+  'xs': 1.2,
+  'sm': 1.4,
+  'md': 1.6,
+  'lg': 1.8
+) !default;
+$line-heights: ();
+@each $name, $value in $define-line-heights {
+  $line-heights: map-merge(
+    $line-heights,
+    (
+      $name: unquote('var(--line-height-#{$name})')
+    )
+  );
+}
+
+$define-spaces: (
+  'auto': auto,
+  'none': 0,
+  '2xs': 5px,
+  'xs': 10px,
+  'sm': 15px,
+  'md': 20px,
+  'lg': 25px,
+  'xl': 30px,
+  '2xl': 35px,
+  '3xl': 40px,
+  '4xl': 45px,
+  '5xl': 50px
+) !default;
+$spaces: ();
+@each $name, $value in $define-spaces {
+  $spaces: map-merge(
+    $spaces,
+    (
+      $name: unquote('var(--space-#{$name})')
+    )
+  );
+}
 
 $text-directions: (
   'left': left,
   'center': center,
   'right': right
-) !default;
-
-$line-height-default: 1 !default;
-$line-height-xs: 1.2 !default;
-$line-height-sm: 1.4 !default;
-$line-height-md: 1.6 !default;
-
-$line-heights: (
-  'default': $line-height-default,
-  'xs': $line-height-xs,
-  'sm': $line-height-sm,
-  'md': $line-height-md
 ) !default;
 
 $visibilities: (
@@ -92,21 +127,6 @@ $positions: (
   'absolute': absolute,
   'fixed': fixed,
   'sticky': sticky
-) !default;
-
-$spaces: (
-  'auto': auto,
-  'none': 0,
-  '2xs': 5px,
-  'xs': 10px,
-  'sm': 15px,
-  'md': 20px,
-  'lg': 25px,
-  'xl': 30px,
-  '2xl': 35px,
-  '3xl': 40px,
-  '4xl': 45px,
-  '5xl': 50px
 ) !default;
 
 $sizes: (
