--- a/dev/src/styles/variables.scss
+++ b/dev/src/styles/variables.scss
@@ -1,3 +1,6 @@
+@use 'sass:map';
+@use 'sass:string';
+
 $define-colors: (
   'primary': #00a596,
   'secondary': #000000,
@@ -16,10 +19,10 @@ $define-colors: (
 ) !default;
 $colors: ();
 @each $name, $value in $define-colors {
-  $colors: map-merge(
+  $colors: map.merge(
     $colors,
     (
-      $name: unquote('var(--color-#{$name})')
+      $name: string.unquote('var(--color-#{$name})')
     )
   );
 }
@@ -37,10 +40,10 @@ $define-font-sizes: (
 ) !default;
 $font-sizes: ();
 @each $name, $value in $define-font-sizes {
-  $font-sizes: map-merge(
+  $font-sizes: map.merge(
     $font-sizes,
     (
-      $name: unquote('var(--font-size-#{$name})')
+      $name: string.unquote('var(--font-size-#{$name})')
     )
   );
 }
@@ -51,10 +54,10 @@ $define-font-weights: (
 ) !default;
 $font-weights: ();
 @each $name, $value in $define-font-weights {
-  $font-weights: map-merge(
+  $font-weights: map.merge(
     $font-weights,
     (
-      $name: unquote('var(--font-weight-#{$name})')
+      $name: string.unquote('var(--font-weight-#{$name})')
     )
   );
 }
@@ -68,10 +71,10 @@ $define-line-heights: (
 ) !default;
 $line-heights: ();
 @each $name, $value in $define-line-heights {
-  $line-heights: map-merge(
+  $line-heights: map.merge(
     $line-heights,
     (
-      $name: unquote('var(--line-height-#{$name})')
+      $name: string.unquote('var(--line-height-#{$name})')
     )
   );
 }
@@ -92,10 +95,10 @@ $define-spaces: (
 ) !default;
 $spaces: ();
 @each $name, $value in $define-spaces {
-  $spaces: map-merge(
+  $spaces: map.merge(
     $spaces,
     (
-      $name: unquote('var(--space-#{$name})')
+      $name: string.unquote('var(--space-#{$name})')
     )
   );
 }
